# openai-summarize-Youtube-Video

./: main.py  pyproject.toml
